k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microservices-demo
  labels:
    name: microservices-demo
    environment: production
  name: voting-app
  labels:
    environment: demo
